--- a/tokenomics.html
+++ b/tokenomics.html
@@ -554,6 +554,7 @@
         </div>
     </div>
 
+    <script src="security.js"></script>
     <script src="script.js"></script>
     <script>
         // Configuration - UPDATE THESE WITH YOUR TOKEN INFO
